feat: refactor asistencias
